@@ -2,10 +2,13 @@ Process Hacker
 
 2.29
  * NEW/IMPROVED:
+   * Added new ASLR information for Windows 8
    * Updated ExtendedServices plugin:
+     * Added new triggers for Windows 8
      * Fixed bug when restarting services
  * FIXED:
    * Fixed Load Count column sorting bug
+   * Fixed signature verification on Windows 8
 
 2.28
  * NEW/IMPROVED:
